--- a/style.css
+++ b/style.css
@@ -4,10 +4,20 @@
     background-color: cadetblue;
 }
 
+
+
+.card {
+    margin: 10px;
+}
+
 button {
     margin: 10px;
 }
 
 .hide {
     display: none;
+}
+
+.to {
+    margin: 0px;
 }
