--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
 .top {
     /* margin: 0px; */
     padding: 10px;
-    background-color: cadetblue;
+    background-color: rgb(95, 86, 223);
+}
+
+input {
+    margin: 10px;
+    max-width: 100%;
+}
+
+/* #user-form {
+    max-height: 50px;
+} */
+
+button {
+    background-color:  rgb(92, 171, 244);
+    color: rgb(0, 0, 118);
 }
 
 .card {
     margin: 10px;
     min-height: 300px;
     min-width: 300px;
+    background-color: rgb(42, 42, 177);
+    color: aliceblue;
+}
+
+.current-container {
+    background-color: rgb(92, 171, 244);
+    color: blue;
+}
+
+.today-in {
+    color: rgb(0, 0, 118);
 }
 
 button {
@@ -16,4 +41,28 @@ button {
 
 .hide {
     display: none;
+}
+
+#image1 {
+    min-width: 70px;
+}
+
+#image2 {
+    max-width: 50px;
+}
+
+#image3 {
+    max-width: 50px;
+}
+
+#image4 {
+    max-width: 50px;
+}
+
+#image5 {
+    max-width: 50px;
+}
+
+#image6 {
+    max-width: 50px;
 }
